fix : 반올림 자리수 수정